# servant-persistent

./: .editorconfig  .gitignore  .stylish-haskell.yaml  .travis.yml  LICENSE  Makefile  README.md  custom-snapshot.yaml  deploy.sh  docker-compose.yml  servant-persistent.cabal  stack.yaml  stylish-haskell.sh
app/: Main.hs
assets/: api.js  index.html
auto/: build  build-to-local  dev-environment  down-dev-dependencies  ghcid-dev-mode  release  release-ci-base  run-prod-local  test  up-dev-dependencies  update-docker
config/: keter.yml
src/: Api.hs  Config.hs  DevelMain.hs  Init.hs  Logger.hs  Main.hs  Models.hs
src/Api/: Person.hs  User.hs
support/ci-base/: Dockerfile
support/dev/: Dockerfile  entrypoint  run
support/prod/: Dockerfile
test/: ApiSpec.hs  UserDbSpec.hs
