name:                servant-persistent
version:             0.2.0.0
synopsis:            Brief example on using persistent with servant
description:         Brief example on using persistent with servant
license:             MIT
license-file:        LICENSE
author:              Matt Parsons
maintainer:          parsonsmatt@gmail.com
copyright:           2016 Matt Parsons
category:            Web
build-type:          Simple
cabal-version:       >=1.18

source-repository head
    type:
        git
    location:
        https://www.github.com/parsonsmatt/servant-persistent

executable perservant
    main-is:
        Main.hs
    build-depends:
        base >= 4.9 && < 5.0
      , servant-persistent
      , persistent-postgresql
      , wai
      , warp
      , monad-logger
      , safe
      , monad-metrics
      , wai-middleware-metrics
      , microlens
      , ekg
      , ekg-core
    hs-source-dirs:
        app
    default-language:
        Haskell2010
    ghc-options:
        -fwarn-unused-imports

library
    default-language:
        Haskell2010
    hs-source-dirs:
        src
    exposed-modules:
        Config
      , Models
      , Api
      , Api.User
      , Logger
    build-depends:
        base >= 4.9 && < 5.0
      , aeson
      , bytestring
      , monad-control
      , monad-logger
      , mtl
      , persistent
      , persistent-postgresql
      , persistent-template
      , servant >= 0.13 && < 0.14
      , servant-js >= 0.9 && < 0.10
      , servant-server >= 0.13 && < 0.14
      , transformers
      , wai
      , wai-extra
      , warp
      , text
      , monad-metrics
      , ekg
      , wai-middleware-metrics
      , microlens
      , containers
      , ekg-core
      , katip >= 0.5.0.2 && < 0.6
      , fast-logger
      , unordered-containers
    ghc-options:
        -fwarn-unused-imports

test-suite servant-persistent-test
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        test
    main-is:
        Spec.hs
    other-modules:
        ApiSpec
        UserDbSpec
    build-depends:
        base
      , persistent
      , persistent-postgresql
      , servant-persistent
      , servant >= 0.13 && < 0.14
      , servant-server >= 0.13 && < 0.14
      , QuickCheck
      , hspec
      , mtl
      , transformers
      , text
      , monad-metrics
    ghc-options:
        -threaded -rtsopts -with-rtsopts=-N -fwarn-unused-imports
    default-language:
        Haskell2010
